# monq

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yaml
backend/: Cargo.toml
backend/src/: clean.rs  context.rs  db.rs  endpoints.rs  lib.rs  main.rs  resolvers.rs  schema.rs  util.rs
backend/src/api/: index.rs
backend/src/clean/: entity.rs  interface.rs  usecases.rs
cli/: Cargo.toml
db/: docker.json  what-is-monq.json
docker/: docker-compose.yaml
docker/elasticsearch/: Dockerfile  index.json  sudachi.json
elasticsearch/: index.json  pipeline.json
fixture/: code.json  complex.json  inline.json
fixture/search/: match_query.json  query_string.json
monq-editor/: package-lock.json  package.json
monq-editor/components/: client-side-only-renderer.js  highlightjs.js  katex.js  layout.js  nav.js
monq-editor/pages/: _app.js  index.js
monq-editor/styles/: index.css
monq_cli/: Cargo.toml
monq_cli/src/: main.rs
monq_dashboard/: Cargo.toml  index.html
monq_dashboard/public/: index.js
monq_dashboard/src/: generated.rs  lib.rs
monq_dashboard/tailwind/: index.js  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
shared/: Cargo.toml
shared/src/: entity.rs  lib.rs
shared/src/es/: api.rs  model.rs
shared/src/es/models/: index.rs  post.rs
