[package]
name = "backend"
version = "0.1.0"
authors = ["BrainVader <brainvade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backend_lib"
path = "src/lib.rs"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
listenfd = "0.3.3" 
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
juniper = "0.14.2"
serde = "1.0.110"
serde_json = "1.0.53"
elasticsearch = "7.7.0-alpha.1"