[package]
name = "monq_cli"
description = "Comand line interface for monq to setup database"
version = "0.1.0"
authors = ["BrainVader <brainvade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
clap = "2.33.1"

shared = { path = "../shared"}