[package]
name = "shared"
version = "0.1.0"
authors = ["BrainVader <brainvade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
anyhow = "1.0.31"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
serde = "1.0.110"

elasticsearch = "7.8.0-alpha.1"
